--- a/03-iosCalculator/app.json
+++ b/03-iosCalculator/app.json
@@ -3,16 +3,15 @@
     "name": "03-iosCalculator",
     "slug": "03-iosCalculator",
     "version": "1.0.0",
-    
-      "web": {
-        "favicon": "./assets/favicon.png"
-      },
-      
-        "experiments": {
-          "tsconfigPaths": true
-        },
-       
-    
+
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+
+    "experiments": {
+      "tsconfigPaths": true
+    },
+
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -21,9 +20,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -33,6 +30,5 @@
         "backgroundColor": "#ffffff"
       }
     }
-     
   }
 }
