--- a/05-ContextApp/package.json
+++ b/05-ContextApp/package.json
@@ -1,51 +1,24 @@
 {
   "name": "05-ContextApp",
   "version": "1.0.0",
-  
   "scripts": {
     "android": "expo start --android",
-	
-    	"format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-	
+    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "ios": "expo start --ios",
     "start": "expo start",
     "web": "expo start --web"
   },
   "dependencies": {
-    
-    
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-    
-    
-
-	
-
-	
-  
-   
-
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
-  
-  
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -53,16 +26,11 @@
     "eslint": "^8.50.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
-    
-    
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native"
   },
-  
-    "main": "node_modules/expo/AppEntry.js",
-  
-  
+  "main": "node_modules/expo/AppEntry.js",
   "private": true
 }
