--- a/06-MoviesApp/package.json
+++ b/06-MoviesApp/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.50.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
