--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -12,6 +12,7 @@
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
