🛠️ chore: Change app icon and prepare environment for building APK

--- a/pokedex/app.json
+++ b/pokedex/app.json
@@ -3,24 +3,23 @@
     "name": "pokedex",
     "slug": "pokedex",
     "version": "1.0.0",
-
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
     "experiments": {
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/pokeball-icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "userInterfaceStyle": "automatic",
       "supportsTablet": true
@@ -30,7 +29,13 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "userInterfaceStyle": "automatic"
+      "userInterfaceStyle": "automatic",
+      "package": "com.hive73.pokedex"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "39e29ebb-e592-4b2f-b0b0-e2e9c964e02b"
+      }
     }
   }
 }
